fix social button alignment

--- a/documents.scss
+++ b/documents.scss
@@ -32,13 +32,11 @@ body {
 
   margin: ($font-size * 2) 0;
   max-width: 100%;
+  line-height: 1;
 
   > div {
+    display: inline-block;
     float: left;
-
-    iframe {
-      vertical-align: text-bottom;
-    }
   }
 }
 
@@ -61,7 +59,7 @@ $breakpoint: ($breakpoint + 160px + $font-size * 2);
 
 @media (min-width: $breakpoint) {
   .adsense {
-    position: fixed;
+    // position: fixed;
     top: ($font-size * 2);
     right: ($font-size * 2);
   }
